# text_summarization_app

./: Dockerfile  README.md  pyproject.toml  run_samples.py
.github/workflows/: docker-image.yml
notebooks/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
services/: app.py  config.py  errors.py  exceptions.py  language_identifier.py  summarizer.py
test/: api_test.py  conftest.py  test_classes.py  unit_test.py
test/resources/: result_1.txt
test/resources/Edge Cases/: english_german.txt  english_text_2.txt  spanish_text_1.txt  summary_2.txt
