[tool.poetry]
name = "coachhub_challenge"
version = "0.1.0"
description = "Technical challenge for the Machine Learning Engineer position at Coach Hub"
authors = ["Joao Guerreiro <joaoguerreiro779@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.10.0"
gcld3 = "^3.0.13"
Flask = "^2.0.2"
transformers = "^4.12.3"


[tool.poetry.dev-dependencies]
pylint = "^2.11.1"
jupyterlab = "^3.2.3"
jupyterlab-widgets = "^1.0.2"
ipywidgets = "^7.6.5"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
