[tool.poetry]
name = "text_summarization_app"
version = "0.1.0"
description = "Containarized text summarization application"
authors = ["Joao Guerreiro <joaoguerreiro779@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.10.0"
gcld3 = "^3.0.13"
Flask = "^2.0.2"
transformers = "^4.12.3"
rouge = "^1.0.1"


[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^21.12b0"
jupyterlab = "^3.2.3"
jupyterlab-widgets = "^1.0.2"
ipywidgets = "^7.6.5"
pytest = "^6.2.5"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
